--- a/_app/_includes/themes/alchemy/includes/footer.html
+++ b/_app/_includes/themes/alchemy/includes/footer.html
@@ -11,6 +11,16 @@
 <!-- User scripts -->
 <script src="{{ '/js/user.js?assets-inline' | prepend: amsf_user_assets }}"></script>
 
+<!-- Twemoji -->
+<script src="https://cdn.jsdelivr.net/npm/twemoji@13.0.2/dist/twemoji.min.js" type="text/javascript"></script>
+<script async="" defer="" type="text/javascript">
+    twemoji.parse(document.body, {
+        folder: 'svg',
+        ext: '.svg',
+        base: 'https://cdn.jsdelivr.net/npm/twemoji/2/',
+    });
+</script>
+
 <!-- Lightense Images -->
 {% if page.plugin == 'lightense' %}
   <script src="{{ '/js/lightense.min.js?assets-inline' | prepend: amsf_theme_assets }}"></script>
