--- a/_app/_includes/themes/alchemy/includes/top.html
+++ b/_app/_includes/themes/alchemy/includes/top.html
@@ -36,7 +36,7 @@
 <!-- Main CSS -->
 <link rel="stylesheet" href="{{ '/css/app.css?assets-inline' | prepend: amsf_theme_assets }}">
 <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet">
 
 <!-- Canonical links, avoid duplicate content problems -->
 <link rel="canonical" href="{{ amsf_page_url }}">
