--- a/_app/assets/themes/alchemy/_scss/_extra.scss
+++ b/_app/assets/themes/alchemy/_scss/_extra.scss
@@ -4,16 +4,16 @@
     --link-color-l: 50%;
 }
 
-img.emoji {
+#markdown-toc a {
+    text-decoration: none;
+    color: var(--link-color);
+}
+
+.emoji {
     height: 1em;
     width: 1em;
     margin: 0 0.05em 0 0.1em;
     vertical-align: -0.1em;
-}
-
-#markdown-toc a {
-    text-decoration: none;
-    color: var(--link-color);
 }
 
 .content > p > a {
