--- a/_app/_includes/themes/alchemy/includes/footer.html
+++ b/_app/_includes/themes/alchemy/includes/footer.html
@@ -17,6 +17,11 @@
     twemoji.parse(document.body, {
         folder: 'svg',
         ext: '.svg',
+        attributes: () => {
+          return {
+            "style" : `height: 1em; width: 1em; margin: 0 0.05em 0 0.1em; vertical-align: -0.1em;`
+          }
+        }
         base: 'https://cdn.jsdelivr.net/npm/twemoji/2/',
     });
 </script>
