--- a/_app/_includes/themes/alchemy/includes/header.html
+++ b/_app/_includes/themes/alchemy/includes/header.html
@@ -1,3 +1,4 @@
+<p class="watermark">Gufeng Shen</p>
 <!-- Main navigation with current page / categoriy highlighted -->
 <div class="header">
   <ul class="tab">
