--- a/_app/_includes/themes/alchemy/includes/footer.html
+++ b/_app/_includes/themes/alchemy/includes/footer.html
@@ -12,22 +12,24 @@
 <script src="{{ '/js/user.js?assets-inline' | prepend: amsf_user_assets }}"></script>
 
 <!-- Twemoji -->
-<script src="https://cdn.jsdelivr.net/npm/twemoji@13.0.2/dist/twemoji.min.js" type="text/javascript"></script>
-<script async="" defer="" type="text/javascript">
-    twemoji.parse(document.body, {
-        folder: 'svg',
-        ext: '.svg',
-        attributes: () => {
-          return {
-            "style" : `height: 1em; width: 1em; margin: 0 0.05em 0 0.1em; vertical-align: -0.1em;`
-          }
-        },
-        base: 'https://cdn.jsdelivr.net/npm/twemoji/2/',
-    });
-</script>
+{% if page.plugin contains 'twemoji' %}
+  <script src="https://cdn.jsdelivr.net/npm/twemoji@13.0.2/dist/twemoji.min.js" type="text/javascript"></script>
+  <script async="" defer="" type="text/javascript">
+      twemoji.parse(document.body, {
+          folder: 'svg',
+          ext: '.svg',
+          attributes: () => {
+            return {
+              "style" : `height: 1em; width: 1em; margin: 0 0.05em 0 0.1em; vertical-align: -0.1em;`
+            }
+          },
+          base: 'https://cdn.jsdelivr.net/npm/twemoji/2/',
+      });
+  </script>
+{% endif %}
 
 <!-- Lightense Images -->
-{% if page.plugin == 'lightense' %}
+{% if page.plugin contains 'lightense' %}
   <script src="{{ '/js/lightense.min.js?assets-inline' | prepend: amsf_theme_assets }}"></script>
   <script>
     window.addEventListener('load', function () {
