--- a/_app/_includes/themes/alchemy/includes/top.html
+++ b/_app/_includes/themes/alchemy/includes/top.html
@@ -1,4 +1,5 @@
 Link: </assets/fonts/bickham-script-pro-3-bold.woff2>; rel=preload;
+Link: <{{ '/js/lightense.min.js?assets-inline' | prepend: amsf_theme_assets }}>; rel=preload;
 <!doctype html>
 
 <html lang="{{ amsf_page_lang }}">
