chore: no lightense on emojies

--- a/_app/_includes/themes/alchemy/includes/footer.html
+++ b/_app/_includes/themes/alchemy/includes/footer.html
@@ -20,7 +20,8 @@
           ext: '.svg',
           attributes: () => {
             return {
-              "style" : `height: 1em; width: 1em; margin: 0 0.05em 0 0.1em; vertical-align: -0.1em;`
+              "style": `height: 1em; width: 1em; margin: 0 0.05em 0 0.1em; vertical-align: -0.1em;`,
+              "class": "no-lightense"
             }
           },
           base: 'https://cdn.jsdelivr.net/npm/twemoji/2/',
