feat: reading time

--- a/_app/_includes/themes/alchemy/includes/footer.html
+++ b/_app/_includes/themes/alchemy/includes/footer.html
@@ -1,6 +1,6 @@
 <!-- Footer section -->
 {% unless page.permalink == '/' and site.data.curtana.clean_homepage %}
-  <footer class="copyright">
+  <footer class="copyright m-b-sparse">
     &copy; {{ amsf_site_name }}. All rights reserved.
   </footer>
 {% endunless %}
