--- a/_app/_includes/themes/alchemy/layouts/post.html
+++ b/_app/_includes/themes/alchemy/layouts/post.html
@@ -18,6 +18,11 @@
       </small>
     {% endif %}
 
+
+    <small>
+      &nbsp;&middot;&nbsp;Reading time: {{ amsf_page_reading_time }}
+    </small>
+
     {% if page.desc %}
       <small>{{ page.desc }}</small>
     {% endif %}
@@ -30,17 +35,17 @@
 
     {% assign date_publish = page.date | date: "%b %-d, %Y" %}
     {% assign date_update  = page.last_modified_at | date: "%b %-d, %Y" %}
-
-    {% if date_publish != date_update and site.dev == false %}
-      <footer class="post-modified-date">
-        <p>
-          Updated
-          <time datetime="{{ page.last_modified_at | date: " %FT%X+08:00 " }}">
-            {{ page.last_modified_at | date: "%A, %b %d, %Y" }}
-          </time>
-        </p>
-      </footer>
-    {% endif %}
   </div>
 
 </article>
+
+{% if date_publish != date_update %}
+  <footer class="post-modified-date copyright p-b-none" style="padding-bottom: 0;">
+    <p><b>
+      Updated
+      <time datetime="{{ page.last_modified_at | date: " %FT%X+08:00 " }}">
+        {{ page.last_modified_at | date: "%A, %b %d, %Y" }}
+      </time>
+    </b></p>
+  </footer>
+{% endif %}
