--- a/_app/_includes/themes/alchemy/layouts/post.html
+++ b/_app/_includes/themes/alchemy/layouts/post.html
@@ -5,7 +5,7 @@
 <article lang="{{ amsf_page_lang }}">
 
   <!-- Post title -->
-  <header class="header m-b-sparse">
+  <header class="header m-b-sparse" style="color: var(--text-color);">
 
     <h1 class="{{ amsf_page_heading_class }} m-b-compat" title="{{ amsf_page_title | strip_html | xml_escape }}" data-title="{{ amsf_page_title | strip_html | xml_escape }}">
       {{ amsf_page_heading }}
@@ -30,7 +30,7 @@
   </header>
 
   <!-- Post content -->
-  <div class="content read p-t-sparse">
+  <div class="content read p-t-sparse" style="color: var(--text-color);">
     {{ content }}
 
     {% assign date_publish = page.date | date: "%b %-d, %Y" %}
@@ -40,12 +40,12 @@
 </article>
 
 {% if date_publish != date_update %}
-  <footer class="post-modified-date copyright p-b-none" style="padding-bottom: 0;">
-    <p><b>
+  <footer class="post-modified-date copyright p-b-none" style="padding-bottom: 0; color: var(--text-color); opacity: .6;">
+    <p style="margin-bottom: 0;"><small>
       Updated
       <time datetime="{{ page.last_modified_at | date: " %FT%X+08:00 " }}">
         {{ page.last_modified_at | date: "%A, %b %d, %Y" }}
       </time>
-    </b></p>
+    </small></p>
   </footer>
 {% endif %}
