chore: enable ga

--- a/_app/_includes/themes/alchemy/includes/footer.html
+++ b/_app/_includes/themes/alchemy/includes/footer.html
@@ -54,7 +54,15 @@
 {{ amsf_service_worker }}
 
 <!-- Google Analytics -->
-{{ amsf_google_analytics }}
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6LH59QE96D"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-6LH59QE96D');
+</script>
 
 <!-- Foot hooks -->
 {% if page.foot %}
